fixed mobile issue where image was overlapping text

--- a/styles/style.css
+++ b/styles/style.css
@@ -74,10 +74,18 @@ ul li a:hover {
 		width: 90%;
 		margin: 1% 5%;
 		position: static;
+		clear: both;
+		height: 100%;
 	}
-	
+
+	.portfolio_work:hover img
+	{
+		opacity: 1.0;
+	}
+
 	.portfolio_work img
 	{
+		display: block;
 		position: static;
 	}
 	.portfolio_work_title
